// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tag should render component with kind "green" and determined width 1`] = `
{
  "asFragment": [Function],
  "baseElement": .c0 {
  position: relative;
  box-sizing: border-box;
  max-width: 100%;
  height: 24px;
  padding: 3px 7px;
  width: 60px;
  border-radius: var(--admiral-border-radius-Small, 4px);
  background: var(--admiral-color-Opacity_Neutral8, #00000014);
  border: 1px solid transparent;
  display: inline-flex;
  align-items: center;
  cursor: default;
}

.c0:focus-visible {
  outline: none;
}

.c0:focus-visible:before {
  content: '';
  position: absolute;
  top: -4px;
  bottom: -4px;
  left: -4px;
  right: -4px;
  border-radius: var(--admiral-border-radius-Small, 4px);
  border: 2px solid var(--admiral-color-Primary_Primary60Main, #0062FF);
}

.c2 {
  color: var(--admiral-color-Neutral_Neutral90, #252629);
  user-select: none;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  font-family: var(--admiral-font-family, 'VTB Group UI', sans-serif);
  font-style: normal;
  font-weight: var(--admiral-font-weight-Caption_Caption1, 400);
  font-size: var(--admiral-font-size-Caption_Caption1, 12px);
  line-height: var(--admiral-line-height-Caption_Caption1, 16px);
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
}

.c1 {
  display: flex;
  flex-shrink: 0;
  width: 8px;
  height: 8px;
  border-radius: 50%;
  margin-right: 6px;
  background: var(--admiral-color-Success_Success50Main, #1BA049);
}

<body>
    <div>
      <button
        class="c0"
        type="button"
      >
        <div
          class="c1"
        />
        <span
          class="c2"
        >
          test
        </span>
      </button>
    </div>
  </body>,
  "container": .c0 {
  position: relative;
  box-sizing: border-box;
  max-width: 100%;
  height: 24px;
  padding: 3px 7px;
  width: 60px;
  border-radius: var(--admiral-border-radius-Small, 4px);
  background: var(--admiral-color-Opacity_Neutral8, #00000014);
  border: 1px solid transparent;
  display: inline-flex;
  align-items: center;
  cursor: default;
}

.c0:focus-visible {
  outline: none;
}

.c0:focus-visible:before {
  content: '';
  position: absolute;
  top: -4px;
  bottom: -4px;
  left: -4px;
  right: -4px;
  border-radius: var(--admiral-border-radius-Small, 4px);
  border: 2px solid var(--admiral-color-Primary_Primary60Main, #0062FF);
}

.c2 {
  color: var(--admiral-color-Neutral_Neutral90, #252629);
  user-select: none;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  font-family: var(--admiral-font-family, 'VTB Group UI', sans-serif);
  font-style: normal;
  font-weight: var(--admiral-font-weight-Caption_Caption1, 400);
  font-size: var(--admiral-font-size-Caption_Caption1, 12px);
  line-height: var(--admiral-line-height-Caption_Caption1, 16px);
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
}

.c1 {
  display: flex;
  flex-shrink: 0;
  width: 8px;
  height: 8px;
  border-radius: 50%;
  margin-right: 6px;
  background: var(--admiral-color-Success_Success50Main, #1BA049);
}

<div>
    <button
      class="c0"
      type="button"
    >
      <div
        class="c1"
      />
      <span
        class="c2"
      >
        test
      </span>
    </button>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Tag should render default component 1`] = `
{
  "asFragment": [Function],
  "baseElement": .c0 {
  position: relative;
  box-sizing: border-box;
  max-width: 100%;
  height: 24px;
  padding: 3px 7px;
  border-radius: var(--admiral-border-radius-Small, 4px);
  background: var(--admiral-color-Opacity_Neutral8, #00000014);
  border: 1px solid transparent;
  display: inline-flex;
  align-items: center;
  cursor: default;
}

.c0:focus-visible {
  outline: none;
}

.c0:focus-visible:before {
  content: '';
  position: absolute;
  top: -4px;
  bottom: -4px;
  left: -4px;
  right: -4px;
  border-radius: var(--admiral-border-radius-Small, 4px);
  border: 2px solid var(--admiral-color-Primary_Primary60Main, #0062FF);
}

.c1 {
  color: var(--admiral-color-Neutral_Neutral90, #252629);
  user-select: none;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  font-family: var(--admiral-font-family, 'VTB Group UI', sans-serif);
  font-style: normal;
  font-weight: var(--admiral-font-weight-Caption_Caption1, 400);
  font-size: var(--admiral-font-size-Caption_Caption1, 12px);
  line-height: var(--admiral-line-height-Caption_Caption1, 16px);
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
}

<body>
    <div>
      <button
        class="c0"
        type="button"
      >
        <span
          class="c1"
        >
          test
        </span>
      </button>
    </div>
  </body>,
  "container": .c0 {
  position: relative;
  box-sizing: border-box;
  max-width: 100%;
  height: 24px;
  padding: 3px 7px;
  border-radius: var(--admiral-border-radius-Small, 4px);
  background: var(--admiral-color-Opacity_Neutral8, #00000014);
  border: 1px solid transparent;
  display: inline-flex;
  align-items: center;
  cursor: default;
}

.c0:focus-visible {
  outline: none;
}

.c0:focus-visible:before {
  content: '';
  position: absolute;
  top: -4px;
  bottom: -4px;
  left: -4px;
  right: -4px;
  border-radius: var(--admiral-border-radius-Small, 4px);
  border: 2px solid var(--admiral-color-Primary_Primary60Main, #0062FF);
}

.c1 {
  color: var(--admiral-color-Neutral_Neutral90, #252629);
  user-select: none;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  font-family: var(--admiral-font-family, 'VTB Group UI', sans-serif);
  font-style: normal;
  font-weight: var(--admiral-font-weight-Caption_Caption1, 400);
  font-size: var(--admiral-font-size-Caption_Caption1, 12px);
  line-height: var(--admiral-line-height-Caption_Caption1, 16px);
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
}

<div>
    <button
      class="c0"
      type="button"
    >
      <span
        class="c1"
      >
        test
      </span>
    </button>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
